Implement POST /entry/:entryId/like
