# routes/routes.js
@@ -15,27 +15,31 @@ router.use(cors({
     credentials: true
 }));
 
-//Auth post routers
+// user related routes
 router.param('userId', userControllers.paramUserId)
 router.post('/register', userControllers.registerUser);
 router.post('/login', userControllers.loginUser);
 router.post('/logout', userControllers.logoutUser);
 router.get('/user', userControllers.getUser);
 router.get('/user/:userId', userControllers.getUserInfoById);
+// authorized user related routes
 router.post('/user/:userId/follow', userAuth, userControllers.followUser);
 router.delete('/user/:userId/follow', userAuth, userControllers.unFollowUser);
 router.get('/profile', userAuth, userControllers.getProfile);
 router.put('/profile', userAuth, userControllers.putProfile)
 
+// entry related routes
 router.param('entryId', entryControllers.paramEntryId);
 router.get('/entry/:entryId', entryControllers.getEntryById);
+router.get('/entry', entryControllers.getEntryList);
+// authorized entry related routes
 router.post('/entry', userAuth, entryControllers.createStory);
 router.post('/entry/:entryId', userAuth, entryControllers.continueStory);
-router.get('/entry', entryControllers.getEntryList);
+router.post('/entry/:entryId/like', userAuth, entryControllers.likeEntry);
 
+// miscelaneous routes
 router.post('/message', miscControllers.postMessage);
 router.param('messageId', miscControllers.paramMessageId);
-
 // admin routes
 router.use('/admin', adminAuth);
 router.get('/admin/message', miscControllers.getMessage);
